# ccunicode

./: CMakeLists.txt  LICENSE  README.md
doc/: CMakeLists.txt  Doxyfile.in  Mainpage.dox
include/: ccunicode.h  ccunicode_impl.h
src/: ccunicode.c
tests/CodepointsToUtf16/: main.c
tests/CodepointsToUtf8/: main.c
tests/Utf16ToCodepoints/: main.c
tests/Utf16ToUtf8/: main.c
tests/Utf8ToCodepoints/: main.c
tests/Utf8ToUtf16/: main.c
